--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,9 @@
   </head>
 
   <body>
+    <%= render 'layouts/navbar' %>
     <%= yield %>
-
+    <%= render 'layouts/footer' %>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
   </body>
