--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,11 @@
   </head>
 
   <body>
+
+  <% if current_user %>
+<p> Connecté </p>
+  <% end %>
+
     <%= yield %>
 
     <p class="notice"><%= notice %></p>
