--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <%= link_to "Le Roi des Chats", root_path, class:"navbar-brand" %> 
+  <%= link_to "Europraid", products_path, class:"navbar-brand" %> 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -7,7 +7,7 @@
   <div class="collapse navbar-collapse" id="navbarColor02">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-         <%= link_to "Accueil", items_path, class:"nav-link" %> 
+         <%= link_to "Accueil", products_path, class:"nav-link" %> 
           <span class="sr-only">(current)</span>
         </a>
       </li>
