add feature create, edit, delete and his view

--- a/app/views/addresses/show.html.erb
+++ b/app/views/addresses/show.html.erb
@@ -1,18 +1,15 @@
 <h1>Addresses#show</h1>
 <p>Find me in app/views/addresses/show.html.erb</p>
 
-<h2> <%= @addresse.first_name %> </h2>
-<h1>Titre : <%= @addresse.last_name %> </h1>
-<h2> Description : <%= @addresse.street_number %> </h2>
-<h2> Rue : <%= @addresse.street %> </h2>
-<h2> Code Postal : <%= @addresse.zip_code %> </h2>
-<h2> Ville: <%= @addresse.city %> </h2>
-<h2> Pays : <%= @addresse.country %> </h2>
-<h2> Numéros de téléphone : <%= @addresse.phone_number %> </h2>
-<h2> Statut: <%= @addresse.type %> </h2>
-<h2> Nom d'entreprise: <%= @addresse.company_name %> </h2>
+<h2>Prénom <%= @address.first_name %> </h2>
+<h2>Nom  : <%= @address.last_name %> </h1>
+<h2> Numéro de Rue : <%= @address.street_number %> </h2>
+<h2> Rue : <%= @address.street %> </h2>
+<h2> Code Postal : <%= @address.zip_code %> </h2>
+<h2> Ville: <%= @address.city %> </h2>
+<h2> Pays : <%= @address.country %> </h2>
+<h2> Numéros de téléphone : <%= @address.phone_number %> </h2>
+<h2> Nom d'entreprise: <%= @address.company_name %> </h2>
 
 
 
-<button type="button" class="btn btn-outline-primary"><%= link_to "Modifier", edit_address_path(address.id) %></button>
-<button type="button" class="btn btn-outline-primary"><%= link_to "Supprimer", address_path(address.id), method: :DELETE %></button>
