--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,18 +6,12 @@
 
     <div class="row">
       <div class="col-md-4">
-        <h3 class="font-weight-bold mb-0">MDB</h3>
+        <h3 class="font-weight-bold mb-0">Raidators</h3>
       </div>
       <div class="col-md-4">
         <ul class="list-unstyled d-flex justify-content-center mb-0 mt-2">
           <li>
-          	<a class="mx-3" role="button">About</a>
-          </li>
-          <li>
-          	<a class="mx-3" role="button">Blog</a>
-          </li>
-          <li>
-          	<a class="mx-3" role="button">Policy</a>
+          	<a class="mx-3" role="button">Équipe</a>
           </li>
           <li>
           	<a class="mx-3" role="button">Contact</a>
@@ -26,8 +20,8 @@
       </div>
       <div class="col-md-4">
         <!-- Copyright -->
-        <div class="footer-copyright text-right bg-transparent dark-grey-text mt-2">© 2019.
-          <a class="dark-grey-text" href="https://mdbootstrap.com/education/bootstrap/"> All rights reserved.</a>
+        <div class="footer-copyright text-right bg-transparent dark-grey-text mt-2">© 2020.
+          <p> All rights reserved.</p>
         </div>
         <!-- Copyright -->
       </div>
