--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head></head>
     <title>RaidatorsProject</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+    <meta charset="utf-8">
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <!-- Bootstrap core CSS -->
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/lux/bootstrap.min.css" integrity="sha384-9+PGKSqjRdkeAU7Eu4nkJU8RFaH8ace8HGXnkiKMP9I9Te0GJ4/km3L1Z8tXigpG" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/17892e5f3b.js" crossorigin="anonymous"></script>    
+
+    <%= stylesheet_link_tag 'application', media: 'all' %>
+    <%= javascript_include_tag 'application'%>
+
   </head>
 
   <body>
-
-
-  <% if current_user %>
-<p> Connecté </p>
-  <% end %>
-
-
     <%= render 'layouts/navbar' %>
-
-    <%= yield %>
+      <!-- MESSAGES -->
+      <%= render 'layouts/flash' %>
+      <!-- CONTENU DE LA PAGE -->
+      <%= yield %>
+      <!-- FOOTER-->
     <%= render 'layouts/footer' %>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
   </body>
 </html>
