--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,11 +1,11 @@
-<h1>Carts#show</h1>
+<h1>Mon Panier </h1>
   <ul>
-    <% cart.selected_products.each do |myproduct| %>
+    <% @cart.selected_products.each do |myproduct| %>
       <h3><%= myproduct.product.title %></h3>
-      <img> <%=image_tag myproduct.item.image_url %></img>
+      <img> <%=myproduct.product.image_url %></img>
       <li> Quantité : <%= myproduct.quantity %></li>
       <p><%= myproduct.product.price %>€</p>
-      <%= button_to 'Supprimer', product, method: :delete, class: 'btn btn-danger'%>
+      <%= button_to 'Supprimer', myproduct, method: :delete, class: 'btn btn-danger'%>
       <% end %>
     </ul>
     
