change of layout and registration form

--- a/app/views/devise/registrations/_editform.html.erb
+++ b/app/views/devise/registrations/_editform.html.erb
@@ -39,17 +39,17 @@
                     <% end %>
                   </div>
 
-                  <div class="field">
+                  <div class="field md-form mt-3">
                     <%= f.label :password_confirmation %><br />
                     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
                   </div>
 
-                  <div class="field">
+                  <div class="field md-form mt-3">
                     <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
                     <%= f.password_field :current_password, autocomplete: "current-password" %>
                   </div>
 
-                  <div class="actions">
+                  <div class="actions text-center my-3">
                      <%= f.submit "Update" %>
                   </div>
                 <% end %>
@@ -60,7 +60,6 @@
               
                 <%= link_to "Back", :back %>
                   
-
                 <%= render "devise/shared/links" %>
               </div>
             </div>
