--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
     <title>RaidatorsProject</title>
     <meta charset="utf-8">
 
-    <!-- Bootstrap core CSS -->
-
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/lux/bootstrap.min.css" integrity="sha384-9+PGKSqjRdkeAU7Eu4nkJU8RFaH8ace8HGXnkiKMP9I9Te0GJ4/km3L1Z8tXigpG" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/17892e5f3b.js" crossorigin="anonymous"></script>    
 
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= javascript_include_tag 'application'%>
@@ -23,4 +20,5 @@
       <!-- FOOTER-->
     <%= render 'layouts/footer' %>
   </body>
+      <script src="https://kit.fontawesome.com/17892e5f3b.js" crossorigin="anonymous"></script>
 </html>
