--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -17,3 +17,9 @@
         <p> Votre panier est vide </p>
     <% end %>
     </div>
+    
+    <div class="container mt-5 mb-3 text-center w-50 card-center">
+    <div id="stripe" class="mt-2">
+      <%= render 'stripe' %>
+    </div>
+    </div> 
