add app/assets and app views

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -12,3 +12,8 @@ background-size: cover;
 background-position: center center;
 height: 100vh;
 }
+
+h1, h2 {
+  border: solid;
+  border-color: red;
+}
