--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -6,3 +6,21 @@
 <button type="button" class="btn btn-outline-primary"><%= link_to "Créer Adresse",new_address_path %></button>
 <button type="button" class="btn btn-outline-primary"><%= link_to "Mes adresses",addresses_path %></button>
 <button type="button" class="btn btn-outline-primary"><%= link_to "Modifier mon mot de passe",edit_user_registration_path %></button>
+
+<br>
+<br>
+<div class="orderscompilation">
+<h5>Mes commandes</h5>
+  <ul>
+     <% Order.all.each do |order| %>
+        <% if order.user_id == current_user.id %>
+           <div class="card mb-2 mx-2">
+             <div class="card-body">
+                <p class="card-text">Commande du : <%= order.created_at.strftime("%d.%m.%Y à %H:%M") %></p>
+                <p class="card-text"><small class="text-muted">Nombre de produits : <% order.selected_products.lenght %>  </small></p>
+              </div>
+            </div>
+          <% end %>
+      <%end%>
+     </ul>
+</div>
