--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -24,7 +24,7 @@
         <div class="dropdown-menu">
         <%if user_signed_in?%>
           <%= link_to "Déconnexion", destroy_user_session_path, method: :delete, class:"dropdown-item" %>
-          <%= link_to "Profil", edit_user_registration_path, class:"dropdown-item" %>
+          <%= link_to "Profil", home_path(current_user.id), class:"dropdown-item" %>
         <%else%>
           <%= link_to "Inscription", new_user_registration_path, class:"dropdown-item" %>
           <%= link_to "Log in", new_user_session_path, class:"dropdown-item" %>
