main.css road to pictures

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -6,7 +6,7 @@
   background-position: center center;
 }
 .banner-product{
-background-image: url(../images/EuropRaid-2017-0511.jpg);
+background-image: url(EuropRaid-2017-0511.jpg);
 background-repeat: no-repeat; 
 background-size: cover; 
 background-position: center center;
