resolving banner bug - still no background image on furniture

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -6,9 +6,10 @@
   background-position: center center;
 }
 .banner-product{
-background-image: url(EuropRaid-2017-0511.jpg);
+background-image: url(../images/EuropRaid-2017-0511.jpg);
 background-repeat: no-repeat; 
-background-size: cover; 
+background-size: cover;
+max-height: 250px; 
 background-position: center center;
 height: 100vh;
 }
