--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,10 +1,10 @@
 <header>
   <!-- Full Page Intro -->
-  <div class="banner-product">
+  <div class="">
     <!-- Mask & flexbox options-->
-    <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
+    <div class=" mask rgba-black-light d-flex justify-content-center align-items-center">
       <!-- Content -->
-      <div class="container">
+      <div class="container banner-product">
         <!--Grid row-->
         <div class="row">
           <!--Grid column-->
