--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -17,7 +17,7 @@
   </div>
 
   <div class="form-group">
-  <button class="btn-primary" type="submit"> Modifier le dons /produits </button>
+  <button class="btn-primary" type="submit"> Modifier le don /produits </button>
   </div>
 
   <%end%>
