--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -14,3 +14,9 @@ background-position: center center;
 height: 100vh;
 }
 
+/* ---------------TEAM PAGE--------------------- */
+
+.w-200 {
+  width: 200px;
+}
+
