--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,8 +1,12 @@
 <header>
   <!-- Full Page Intro -->
+  <!-- Full Page Intro -->
   <div class="">
     <!-- Mask & flexbox options-->
-    <div class=" mask rgba-black-light d-flex justify-content-center align-items-center">
+    <div class="view">
+        <%= image_tag("banner.jpg", class:"card-img-top banner", alt:"Card image cap") %> 
+        <div class="mask rgba-black-light d-flex justify-content-center align-items-center"></div>
+    </div>
       <!-- Content -->
       <div class="container banner-product">
         <!--Grid row-->
@@ -25,3 +29,6 @@
   <!-- Full Page Intro -->
 </header>
 <!-- Main navigation -->
+
+
+
