add index order in user profile

--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -1,15 +1,26 @@
-<h1>Homes#show</h1>
-<p>Find me in app/views/homes/show.html.erb</p>
+<h1>Mon Profil</h1>
+
 
 <h2> Email: <%= @user.email %> </h2>
 
 
+<div class="table ">
+        <table class="table">
+          <thead class="table-header h4">
+            <tr><th class="h3"><strong>Mon historique d'achats :</strong></th></tr>
+            <tr>
+              <th scope="col">Titre</th>
+              <th scope="col">Prix (€)</th>
+              <th scope="col">Quantité</th>
+              <th scope="col">Total</th>
+            </tr>
+            </thead>
         <tbody>
             <% @orders.each do |order| %>
               <tr>
                 <th>Commande numéro : <strong><%= order.id %></strong></th>
                 <% total = 0 %>
-                <% order.join_order_prodcuts.each do |order_product| %>
+                <% order.join_order_products.each do |order_product| %>
                   <% total += order_product.quantity * order_product.product.price %>
                   <tr>
                     <th class="text-center"><strong><%= order_product.product.title %></strong></th>
@@ -22,7 +33,10 @@
               </tr>
             <% end %>
           </tbody>
-
+          </table>
+          </div>
+<br>
+<br>
 
 
 
@@ -31,21 +45,3 @@
 <button type="button" class="btn btn-outline-primary"><%= link_to "Créer Adresse",new_address_path %></button>
 <button type="button" class="btn btn-outline-primary"><%= link_to "Mes adresses",addresses_path %></button>
 <button type="button" class="btn btn-outline-primary"><%= link_to "Modifier mon mot de passe",edit_user_registration_path %></button>
-
-<br>
-<br>
-<div class="orderscompilation">
-<h5>Mes commandes</h5>
-  <ul>
-     <% Order.all.each do |order| %>
-        <% if order.user_id == current_user.id %>
-           <div class="card mb-2 mx-2">
-             <div class="card-body">
-                <p class="card-text">Commande du : <%= order.created_at.strftime("%d.%m.%Y à %H:%M") %></p>
-                <p class="card-text"><small class="text-muted">Nombre de produits : <% order.selected_products.lenght %>  </small></p>
-              </div>
-            </div>
-          <% end %>
-      <%end%>
-     </ul>
-</div>
