--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -14,3 +14,13 @@ background-position: center center;
 height: 100vh;
 }
 
+
+/* ----------CARROUSEL BOX SHADOW------------- */
+
+
+.carousel-caption {
+  background: rgba(0, 0, 0, 0.5);
+  background-size: cover;
+  top: 70%;
+  transform: translateY(-150%);
+ }
