add changes for navbar

--- a/app/views/static_pages/home_page.html.erb
+++ b/app/views/static_pages/home_page.html.erb
@@ -72,8 +72,8 @@
         <section class="">
       
           <!-- Section heading -->
-          <h2 class="text-left font-weight-bold mb-5">Europ'Raid</h2>
-          <h3 class="text-left font-weight-bold mb-5">Premier raid aventure en Europe</h3>
+          <h2 class="text-left font-weight-bold mb-5">Raidators</h2>
+          <h3 class="text-left font-weight-bold mb-5">Europ'raid, premier raid aventure en Europe</h3>
 
       
           <!-- Grid row -->
