--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -23,3 +23,22 @@ height: 100vh;
   top: 70%;
   transform: translateY(-150%);
  }
+
+/* ------------NAVBAR------------ */
+ .navbar-custom {
+  background-color: #143724;
+}
+/* change the brand and text color */
+.navbar-custom .navbar-brand,
+.navbar-custom .navbar-text {
+  color: rgba(115, 151, 56, 0.938);
+}
+/* change the link color */
+.navbar-custom .navbar-nav .nav-link {
+  color: rgba(255, 255, 255, 0.801);
+}
+/* change the color of active or hovered links */
+.navbar-custom .nav-item.active .nav-link,
+.navbar-custom .nav-item:hover .nav-link {
+  color: #0ea500;
+}
