--- a/app/views/static_pages/privatevisitors.html.erb
+++ b/app/views/static_pages/privatevisitors.html.erb
@@ -4,14 +4,33 @@
 
   <!--Section: Content-->
   <section class="">
-
     <!-- Section heading -->
     <h2 class="text-left font-weight-bold mb-5">Donner accès à l'éducation</h2>
     <p class="text-left font-weight-bold mb-5">L’ Europ’Raid est le premier Raid-Aventure d’ Europe. Il organise cette action dans les pays de l’Europe de l’Est depuis 2014.
     Ce raid consiste à traverser l’Europe en Peugeot 205 avec à son bord 70 Kg de matériel scolaire, sportif ou médical. Ces dernières seront ensuite distribuées dans des écoles et orphelinats locaux d’Europe de l’Est pour aider les enfants défavorisés.</p>
-    <h3 class="text-left font-weight-bold mb-5">Comment participer ?</h3>
     <br>
   </section>
+
+</div>
+
+
+
+<div class="container mt-0 mb-5">
+  <div class="row align-items-center">
+      <!-- Grid column -->
+      <div class="col-lg-10"> 
+        <h3> Objectif 100% </h3>
+      </div>
+      <div class="col-lg-12 mb-5">
+        <div class="progress">
+          <div class="progress-bar bg-success" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+       </div>
+  </div>
+<div class= "container mt-5">
+  <div class="col-lg-10 mt-5"> 
+  <h3 class="text-left font-weight-bold mb-5">Comment participer ?</h3>
+ </div>
+</div>
 
 
 <!-- Container  -->
@@ -44,14 +63,10 @@
         <!-- Featured image -->
         <div class="view overlay rounded z-depth-2 mb-lg-0 mb-4">
           <%= image_tag("equipment/schoolmaterial.png", class:"img-fluid", alt:"Sample image") %> 
-        
         </div>
 
-      
       </div>
       <!-- Grid column -->
-
-    
 
     </div>
     <!-- Grid row -->
@@ -63,7 +78,6 @@
 </div>
 
 <div class="container mt-5">
-
 
   <!--Section: Content-->
   <section class="dark-grey-text">
@@ -97,8 +111,9 @@
 
     </div>
     <!-- Grid row -->
-
-    <hr class="my-5">
     
   </section>
   <!--Section: Content-->
+  <hr class="my-5">
+</div>
+
