--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-custom">
-  <%= link_to "Europraid", products_path, class:"navbar-brand" %> 
+  <%= link_to "Europraid", home_page_path, class:"navbar-brand" %> 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -9,8 +9,8 @@
       <li class="nav-item active">
         <li><%= link_to "Accueil", home_page_path, class:"nav-link" %> </li>
         <li><%= link_to "Professionnels", partnership_path, class:"nav-link" %></li> 
-        <li><%= link_to "Faire un don", partnership_path, class:"nav-link" %></li> 
-        <li><%= link_to "Collecte de fourniture", partnership_path, class:"nav-link" %> </li> 
+        <li><%= link_to "Faire un don", products_path, class:"nav-link" %></li> 
+        <li><%= link_to "Collecte de fourniture", equipments_path, class:"nav-link" %> </li> 
         <li><%= link_to "L'équipe", team_path, class:"nav-link" %></li>
         <span class="sr-only">(current)</span>
 
@@ -35,7 +35,5 @@
         <%end%> 
         </div>
       </li>
-    </ul>
-
   </div>
 </nav>
