evening commit with change in password/productsview/homepage

--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,34 +1,6 @@
-<header>
-  <!-- Full Page Intro -->
-  <!-- Full Page Intro -->
-  <div class="">
-    <!-- Mask & flexbox options-->
-    <div class="view">
-        <%= image_tag("banner.jpg", class:"card-img-top banner", alt:"Card image cap") %> 
-        <div class="mask rgba-black-light d-flex justify-content-center align-items-center"></div>
-    </div>
-      <!-- Content -->
-      <div class="container banner-product">
-        <!--Grid row-->
-        <div class="row">
-          <!--Grid column-->
-          <div class="col-md-12 mb-4 text-white text-center">
-            <h1 class="h1-reponsive text-white text-uppercase font-weight-bold mb-0 pt-md-5 pt-5 wow fadeInDown"
-              data-wow-delay="0.3s"><strong>NOUS SOUTENIR</strong></h1>
-            <hr class="hr-light my-4 wow fadeInDown" data-wow-delay="0.4s">
-            <p class="text-uppercase mb-4 text-white wow fadeInDown" data-wow-delay="0.4s"><strong>La solidarité n'a pas de frontière</strong></p>
-          </div>
-          <!--Grid column-->
-        </div>
-        <!--Grid row-->
-      </div>
-      <!-- Content -->
-    </div>
-    <!-- Mask & flexbox options-->
+<section class="jumbotron text-center banner" style="background: url(https://images.unsplash.com/photo-1488521787991-ed7bbaae773c?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80) no-repeat center center;background-size: cover; padding: 10%;">
+  <div class="container">
+    <h1 class="jumbotron-heading text-white font-weight-bold">Les Raidators</h1>
+    <h3 class="jumbotron-heading text-black bg-light" style="opacity: 0.7;">La solidarité n'a pas de  frontière !</h3>
   </div>
-  <!-- Full Page Intro -->
-</header>
-<!-- Main navigation -->
-
-
-
+</section>
