--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,28 +1,24 @@
 /* custom.css */
 .image-signup{
-  background-image: url(../images/signup-EuropRaid-2017-0431.jpg); 
+  background-image: 
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
 }
-.banner-product{
-background-repeat: no-repeat; 
+.banner{
+background-repeat: no-repeat;
+background-image: url(../images/signup-EuropRaid-2017-0431.jpg);  
 background-size: cover;
 max-height: 250px; 
 background-position: center center;
 height: 100vh;
 }
 
-
-/* ----------CARROUSEL BOX SHADOW------------- */
-
-
-.carousel-caption {
-  background: rgba(0, 0, 0, 0.5);
-  background-size: cover;
-  top: 70%;
-  transform: translateY(-150%);
- }
+.footerend{
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
 
 /* ------------NAVBAR------------ */
  .navbar-custom {
