--- a/app/views/devise/registrations/_editform.html.erb
+++ b/app/views/devise/registrations/_editform.html.erb
@@ -8,8 +8,8 @@
       <!-- Content -->
       <div class="container py-5 my-5">
         
-        <h3 class="font-weight-bold text-center text-white pb-2">Bonjour</h3>
-        <p class="lead text-center text-white pt-2 mb-5"><%= resource_name.to_s.humanize %></p>
+        <h3 class="font-weight-bold text-center text-dark pb-2">Modifier mon mot de passe</h3>
+        <p class="lead text-center text-dark pt-2 mb-5"></p>
         
         <!--Grid row-->
         <div class="row d-flex align-items-center justify-content-center">
@@ -31,7 +31,7 @@
                   <% end %>
 
                   <div class="field md-form mt-3">
-                    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+                    <%= f.label :password %> <i>(ne pas remplir si vous ne voulez pas changer de mot de passe)</i><br>
                     <%= f.password_field :password, autocomplete: "new-password", class:"form-control" %>
                     <% if @minimum_password_length %>
                       <br />
@@ -40,25 +40,26 @@
                   </div>
 
                   <div class="field md-form mt-3">
-                    <%= f.label :password_confirmation %><br />
+                    <%= f.label :password_confirmation %><br/>
                     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
                   </div>
 
                   <div class="field md-form mt-3">
-                    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-                    <%= f.password_field :current_password, autocomplete: "current-password" %>
+                    <%= f.label :current_password, class:"field md-form mt-3" %> <i>(Nous avons besoin de votre mot de passe actuel pour confirmer vos changements)</i><br />
+                    <%= f.password_field :current_password, autocomplete: "current-password", class:"field md-form mt-3" %>
                   </div>
 
                   <div class="actions text-center my-3">
-                     <%= f.submit "Update" %>
+                     <%= f.submit "Mettre à jour mon mot de passe",class:"btn btn-primary btn-md btn-rounded mx-0" %>
                   </div>
                 <% end %>
+                <br>
               
-                <h3>Cancel my account</h3>
+                <h3 >Supprimer mon compte</h3>
               
-                <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+                <p>Vous voulez supprimer votre compte? <%= button_to "Supprimer mon compte", registration_path(resource_name), data: { confirm: "êtes-vous sûrs ?" }, method: :delete, class:"btn btn-primary btn-md btn-rounded mx-0" %></p>
               
-                <%= link_to "Back", :back %>
+                <%= link_to "Retour", :back %>
                   
                 <%= render "devise/shared/links" %>
               </div>
