--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -1,47 +1,48 @@
-<h1>Mon Profil</h1>
+<div class="container">
 
+  <div>
+    <h2 class="text-center mt-5">Mon Profil</h2>
+    <p class="text-center mb-5">  <%= @user.email.split('@')[0].capitalize %> </p>
+  </div>
 
-<h2> Email: <%= @user.email %> </h2>
-
-
-<div class="table ">
-        <table class="table">
-          <thead class="table-header h4">
-            <tr><th class="h3"><strong>Mon historique d'achats :</strong></th></tr>
-            <tr>
-              <th scope="col">Titre</th>
-              <th scope="col">Prix (€)</th>
-              <th scope="col">Quantité</th>
-              <th scope="col">Total</th>
-            </tr>
-            </thead>
-        <tbody>
-            <% @orders.each do |order| %>
+  <div class="table ">
+    <table class="table">
+      <thead class="table-header h4">
+        <tr><th class="h3"><strong>Mon historique d achats :</strong></th></tr>
+        <tr>
+          <th scope="col">Titre</th>
+          <th scope="col">Prix (€)</th>
+          <th scope="col">Quantité</th>
+          <th scope="col">Total</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @orders.each do |order| %>
+          <tr>
+            <th>Commande numéro : <strong><%= order.id %></strong></th>
+            <% total = 0 %>
+            <% order.join_order_products.each do |order_product| %>
+              <% total += order_product.quantity * order_product.product.price %>
               <tr>
-                <th>Commande numéro : <strong><%= order.id %></strong></th>
-                <% total = 0 %>
-                <% order.join_order_products.each do |order_product| %>
-                  <% total += order_product.quantity * order_product.product.price %>
-                  <tr>
-                    <th class="text-center"><strong><%= order_product.product.title %></strong></th>
-                    <th class="text-center"><%= order_product.product.price %></th>
-                    <th class="text-center"><%= order_product.quantity %></th>
-                    <th class="text-center"><%= order_product.quantity * order_product.product.price %></th>
-                  </tr>
-                <% end %>
-                <th class="text-right">Total du prix de la commande : <strong><%= total %></strong></th>
+                <th class="text-center"><strong><%= order_product.product.title %></strong></th>
+                <th class="text-center"><%= order_product.product.price %></th>
+                <th class="text-center"><%= order_product.quantity %></th>
+                <th class="text-center"><%= order_product.quantity * order_product.product.price %></th>
               </tr>
             <% end %>
-          </tbody>
-          </table>
-          </div>
-<br>
-<br>
+            <th class="text-right">Total du prix de la commande : <strong><%= total %></strong></th>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+        
+  <br>
+  <br>
 
-
-
-
-
-<button type="button" class="btn btn-outline-primary"><%= link_to "Créer Adresse",new_address_path %></button>
-<button type="button" class="btn btn-outline-primary"><%= link_to "Mes adresses",addresses_path %></button>
-<button type="button" class="btn btn-outline-primary"><%= link_to "Modifier mon mot de passe",edit_user_registration_path %></button>
+  <div class="container text-center">
+    <button type="button" class="btn btn-outline-primary"><%= link_to "Créer Adresse",new_address_path %></button>
+    <button type="button" class="btn btn-outline-primary"><%= link_to "Mes adresses",addresses_path %></button>
+    <button type="button" class="btn btn-outline-primary"><%= link_to "Modifier mon mot de passe",edit_user_registration_path %></button>
+  </div>
+</div>
