--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -17,7 +17,7 @@
       </li>
       <% if user_signed_in? %>
       <li class="nav-item active">
-      <%= link_to "Panier", cart_path(current_user.id), class:"nav-link" %> <i class="fas fa-shopping-cart"></i> <b>
+      <%= link_to "Panier", cart_path(Cart.find_or_create_by(user_id: current_user.id)), class:"nav-link" %> </i> <b>
       <span class="sr-only">(current)</span>
      </a>
     </li>
