modify home_page, add link to 3 buttons, add value proposition

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -11,6 +11,16 @@
   align-items: flex-end;
 }
 
+/* ----------CARROUSEL BOX SHADOW------------- */
+
+
+.carousel-caption {
+  background: rgba(0, 0, 0, 0.5);
+  background-size: cover;
+  top: 70%;
+  transform: translateY(-150%);
+ }
+ 
 /* ------------NAVBAR------------ */
  .navbar-custom {
   background-color: #143724;
