--- a/app/views/static_pages/partnership.html.erb
+++ b/app/views/static_pages/partnership.html.erb
@@ -61,7 +61,7 @@
     
             <!-- Featured Image -->
             <div class="view overlay rounded z-depth-2 mb-lg-0 mb-4">
-              <%= image_tag("partnership/205.jpeg", class:"card-img-top", alt:"Card image cap") %>
+              <%= image_tag("205.jpeg", class:"card-img-top", alt:"Card image cap") %>
          
             </div>
     
