--- a/app/views/carts/_web_cart.html.erb
+++ b/app/views/carts/_web_cart.html.erb
@@ -21,9 +21,6 @@
                   <li class="nav-item">
                     <a class="nav-link" data-toggle="tab" href="#tabCheckoutAddons123" role="tab">2. Produit</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" data-toggle="tab" href="#tabCheckoutPayment123" role="tab">3. Paiement</a>
-                  </li>
                 </ul>
     
                 <!-- Pills panels -->
@@ -124,7 +121,7 @@
     
                       <div class="mb-1">
                         <input type="checkbox" class="form-check-input filled-in" id="chekboxRules">
-                        <label class="form-check-label" for="chekboxRules">J'accepte les termes et conditions de vente</label>
+                        <label class="form-check-label" for="chekboxRules">J'accepte les termes et conditions de prévente</label>
                       </div>
                       <div class="mb-1">
                         <input type="checkbox" class="form-check-input filled-in" id="subscribeNewsletter">
@@ -159,10 +156,9 @@
                       <!--Grid column-->
                       <div class="col-md-7 mb-4">
     
-                        <h3 class="mb-3 h5"><%= myproduct.product.title %></h3>
+                        <h3 class="mb-3 h3"><%= myproduct.product.title %></h3>
     
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, ea ut aperiam corrupti,
-                          dolorem.</p>
+                        <p>Description</p>
     
                         <!--Name-->
 
@@ -186,91 +182,14 @@
     
                     <hr class="mb-5">
     
-                    <!--Grid row-->
-                    <div class="row">
     
-                      <!--Grid column-->
-                      <div class="col-md-5 mb-4">
-    
-                        <img src="https://mdbootstrap.com/img/Photos/Others/images/44.jpg" class="img-fluid z-depth-1-half"
-                          alt="Second sample image">
-    
-                      </div>
-                      <!--Grid column-->
-    
-                      <!--Grid column-->
-                      <div class="col-md-7 mb-4">
-    
-                        <h5 class="mb-3 h5"><%= myproduct.product.title %></h5>
-    
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, ea ut aperiam corrupti,
-                          dolorem.</p>
-    
-                        <!--Name-->
-                        <select class="mdb-select colorful-select dropdown-info">
-                          <option value="" disabled>Quantité</option>
-                          <option value="1" selected>1</option>
-                          <option value="2">2</option>
-                          <option value="3">3</option>
-                          <option value="4">4</option>
-                        </select>
-    
-                        <button type="button" class="btn btn-success btn-md btn-rounded mx-0">Ajouter les modifications</button>
-    
-                      </div>
-                      <!--Grid column-->
-    
-                    </div>
-                    <!--Grid row-->
-    
-                    <hr class="mb-4">
-    
-                    <button class="btn btn-success btn-md btn-rounded mx-0" type="submit">Etape suivante</button>
-    
-                  </div>
-                  <!--/.Panel 2-->
-    
-                  <!--Panel 3-->
-                  <div class="tab-pane fade" id="tabCheckoutPayment123" role="tabpanel">
-                    <div class="row">
-                      <div class="col-md-6 mb-3">
-                        <label for="cc-name123">Nom de la carte </label>
-                        <input type="text" class="form-control" id="cc-name123" placeholder="" required>
-                        <small class="text-muted">Nom et prénom affiché sur la carte</small>
-                        <div class="invalid-feedback">
-                          Le nom de la carte est obligatoire
-                        </div>
-                      </div>
-                      <div class="col-md-6 mb-3">
-                        <label for="cc-number123">Numéro carte de crédit</label>
-                        <input type="text" class="form-control" id="cc-number123" placeholder="" required>
-                        <div class="invalid-feedback">
-                          Le numéro est obligatoire
-                        </div>
-                      </div>
-                    </div>
-                    <div class="row">
-                      <div class="col-md-3 mb-3">
-                        <label for="cc-expiration123">Date d'expirationde la carte</label>
-                        <input type="text" class="form-control" id="cc-expiration123" placeholder="" required>
-                        <div class="invalid-feedback">
-                          La date est obligatoire
-                        </div>
-                      </div>
-                      <div class="col-md-3 mb-3">
-                        <label for="cc-cvv123">CVV</label>
-                        <input type="text" class="form-control" id="cc-cvv123" placeholder="" required>
-                        <div class="invalid-feedback">
-                          Le code de securité est obligatoire
-                        </div>
-                      </div>
-                    </div>
                     <hr class="mb-4">
     
                     <button class="btn btn-success btn-md btn-rounded mx-0" type="submit">Valider la commande</button>
     
                   </div>
-                  <!--/.Panel 3-->
+                  <!--/.Panel 2-->
+    
     
                 </div>
                 <!-- Pills panels -->
@@ -280,10 +199,12 @@
               <!--Grid column-->
     
               <!--Grid column-->
+
               <div class="col-lg-4 mb-4">
     
                 <button class="btn btn-success btn-lg btn-block" type="submit">Valider la commande</button>
-    
+                <%= render 'stripe' %>
+
                 <!--Card-->
                 <div class="card z-depth-0 border border-light rounded-0">
     
@@ -295,48 +216,31 @@
     
                     <dl class="row">
                       <dd class="col-sm-8">
-
-
-                        Nom du produit
+                        <%= myproduct.product.title %>
                       </dd>
                       <dd class="col-sm-4">
                       <p><%= myproduct.product.price %>€</p>
                       </dd>
                     </dl>
-    
+                    <% end %>
+        
                     <hr>
+
     
-                    <dl class="row">
-                      <dd class="col-sm-8">
-                        NOM DU PRODUIT
-                      </dd>
-                      <dd class="col-sm-4">
-                        PRIX €€
-                      </dd>
-                    </dl>
-    
-                    <hr>
-    
-                    <dl class="row">
-                      <dd class="col-sm-8">
-                       NOM DU PRODUIT
-                      </dd>
-                      <dd class="col-sm-4">
-                        PRIX €€
-                      </dd>
-                    </dl>
-    
-                    <hr>
-    
+                    <% if @cart.selected_products.length != 0 %>
                     <dl class="row">
                       <dt class="col-sm-8">
                         Total
                       </dt>
                       <dt class="col-sm-4">
-                        PRIX €€
+                        <%= @cart.total %> €
                       </dt>
                     </dl>
-                  <% end %>
+                     <% else %>
+                      <p> Votre panier est vide </p>
+                    <% end %>
+
+
 
                   </div>
     
