--- a/app/views/static_pages/home_page.html.erb
+++ b/app/views/static_pages/home_page.html.erb
@@ -85,10 +85,10 @@
             <div class="col-lg-4 col-md-12 mb-lg-0 mb-4">
       
               <!-- Card -->
-              <div class="card hoverable">
+              <div class="card SmallcardRaidators">
       
                 <!-- Card image -->
-                <td><i class="text-center fas fa-users fa-5x"></i></td>      
+                <td><i class="mt-5 text-center fas fa-users fa-5x"></i></td>      
                 <!-- Card content -->
                 <div class="card-body">
       
@@ -109,10 +109,10 @@
             <div class="col-lg-4 col-md-6 mb-md-0 mb-4">
       
               <!-- Card -->
-              <div class="card hoverable">
+              <div class="card SmallcardRaidators">
       
                 <!-- Card image -->
-                <i class="text-center fas fa-globe-europe fa-5x"></i>
+                <i class="mt-5 text-center fas fa-globe-europe fa-5x"></i>
 
                 <!-- Card content -->
                 <div class="card-body">
@@ -137,10 +137,10 @@
             <div class="col-lg-4 col-md-6 mb-0">
       
               <!-- Card -->
-              <div class="card hoverable">
+              <div class="card SmallcardRaidators">
       
                 <!-- Card image -->
-                <i class="text-center fas fa-route fa-5x"></i>
+                <i class="mt-5 text-center fas fa-route fa-5x"></i>
 
                 <!-- Card content -->
                 <div class="card-body">
@@ -181,10 +181,10 @@
             <div class="col-lg-6 col-md-12 mb-lg-3 mb-4">
       
               <!-- Card -->
-              <div class="card hoverable">
+              <div class="card SmallcardRaidators">
       
                 <!-- Card image -->
-                <%= image_tag("home_page/professionnal.png", class:"card-img-top", alt:"Card image cap") %>
+                <%= image_tag("home_page/professionnal.png", class:"card-img-top SmallcardImageRaidators", alt:"Card image cap") %>
                   
                   <!-- Card content -->
                   <div class="card-body">
@@ -194,7 +194,7 @@
                     <!-- Text -->
                     <p class="card-title text-muted font-small mt-3 mb-2">Devenez partenaire ! Financier ou en nature, vous pouvez soutenir la cause !</p>
                     
-                    <%= link_to 'Devenir un partenaire', partnership_path, class: "btn btn-success text-white p-2 mx-0"%>                    
+                    <%= link_to 'Devenir un partenaire', partnership_path, class: "btn btn-success btn-raidators text-white p-2 mx-0"%>                    
                   </div>   
 
               </div>
@@ -207,10 +207,10 @@
             <div class="col-lg-6 col-md-6 mb-md-3 mb-4">
       
               <!-- Card -->
-              <div class="card hoverable">
+              <div class="card SmallcardRaidators">
       
                 <!-- Card image -->
-                <%= image_tag("home_page/particular.png", class:"card-img-top", alt:"Card image cap") %>
+                <%= image_tag("home_page/particular.png", class:"card-img-top SmallcardImageRaidators", alt:"Card image cap") %>
       
                 <!-- Card content -->
                 <div class="card-body">
@@ -248,7 +248,7 @@
             <div class="col-lg-5">
       
               <!-- Featured video -->
-              <div class="view overlay rounded z-depth-2 mb-lg-0 mb-4">
+              <div class="view overlay rounded z-depth-2 mb-lg-0 mb-4 ">
               <%= video_tag "video_humanity.mp4", :size => "420x315", :controls => true %>      
                   
               </div>
@@ -312,7 +312,7 @@
             <div class="col-lg-5">
       
               <!-- Featured image -->
-              <div class="view overlay rounded z-depth-2 mb-lg-0 mb-4">
+              <div class="view overlay rounded z-depth-2 mb-lg-0 mb-4 ">
                 <%= image_tag("home_page/children.png", class:"card-img-top", alt:"Card image cap") %>               
               </div>
       
@@ -351,7 +351,7 @@
           <div class="col-md-3 mb-4">
     
             <!-- Card -->
-            <div class="card hoverable">
+            <div class="card ">
               <!-- Card content -->
               <div class="card-body my-4">
 
@@ -371,7 +371,7 @@
           <div class="col-md-3 mb-4">
     
             <!-- Card -->
-            <div class="card hoverable">
+            <div class="card">
               
               <!-- Card content -->
               <div class="card-body my-4">
@@ -389,7 +389,7 @@
           <div class="col-md-3 mb-4">
     
             <!-- Card -->
-            <div class="card hoverable">
+            <div class="card">
               
               <!-- Card content -->
               <div class="card-body my-4">
